
  - Leading whitespace not trimmed in HTML filter
  https://sourceforge.net/p/omegat/bugs/1006/

  - HTML filter whitespace handling errors
  https://sourceforge.net/p/omegat/bugs/1007/

  - Wrong background color in dark mode on Linux Mint
  https://sourceforge.net/p/omegat/bugs/1013/

  - Project Files table does not respect LAF colors
  https://sourceforge.net/p/omegat/bugs/1016/

----------------------------------------------------------------------
 OmegaT 5.3.0 (2020-08-03)
----------------------------------------------------------------------
  6 Enhancements
  9 Bug fixes
  10 Localisation updates
----------------------------------------------------------------------
5.3.0 vs 5.2.0

  Implemented requests:

  - Display concordance hits from auto/enforce TMX files first
  https://sourceforge.net/p/omegat/feature-requests/1283/

  - Support reading metadata from plugins and display in UI
  https://sourceforge.net/p/omegat/feature-requests/1434/

  - Add a "file" type to repository type
  https://sourceforge.net/p/omegat/feature-requests/1446/

  - Configurable Fuzzy Matches Threshold
  https://sourceforge.net/p/omegat/feature-requests/1450/

  - Mozilla .ftl files filter
  https://sourceforge.net/p/omegat/feature-requests/1479/

  - Support Yandex.Cloud machine translation
  https://sourceforge.net/p/omegat/feature-requests/1494/

  Bug fixes:

  - application_startup event could fail to execute scripts
  https://sourceforge.net/p/omegat/bugs/860

  - Fix wrong translated word from 'Term' in `Bundle_ko.properties`
  https://sourceforge.net/p/omegat/bugs/939/

  - Alternative translations are not taken into account if no default
  translation is set
  https://sourceforge.net/p/omegat/bugs/969/

  - Wrong directory separator character used in external command
  placeholders on Windows
  https://sourceforge.net/p/omegat/bugs/984/

  - RLE and LRE control characters not visible in editor
  https://sourceforge.net/p/omegat/bugs/988/
